# Stm32

Bare-metal_templates/Stm32f303xE/: CMakeLists.txt  readme.txt  toolchain.cmake
Bare-metal_templates/Stm32f303xE/src/: main.c
